1. jwt 코딩 2. jwt 의존성 1.11로 맞춤 3. postman 테스트 방법 추가

--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,15 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	
+	// jwt 관련 의존성
+	implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
+	implementation 'io.jsonwebtoken:jjwt-jackson:0.11.2'
+	
+    //compile group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+    //runtime group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+    //runtime group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
 }
 
 tasks.named('test') {
